# kotlin

./: README.md
IM/: build.gradle
IM/app/: build.gradle
IM/app/src/main/: AndroidManifest.xml
IM/app/src/main/res/layout/: activity_splash.xml
IM/gradle/wrapper/: gradle-wrapper.properties
RitaVideo/app/: build.gradle
RitaVideo/app/src/main/: AndroidManifest.xml
RitaVideo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  play.cpp  playheader.h
RitaVideo/app/src/main/res/layout/: activity_main.xml  activity_splash.xml  activity_toolbar.xml  (+4 more)
RitaVideo/gradle/wrapper/: gradle-wrapper.properties
TouTiao/app/: build.gradle
TouTiao/app/src/main/: AndroidManifest.xml
TouTiao/gradle/wrapper/: gradle-wrapper.properties
ffplay/app/: build.gradle
ffplay/app/src/main/: AndroidManifest.xml
ffplay/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  play.cpp
ffplay/gradle/wrapper/: gradle-wrapper.properties
ktplayer/: build.gradle
ktplayer/app/: build.gradle
ktplayer/app/src/main/: AndroidManifest.xml
ktplayer/app/src/main/cpp/: native-lib.cpp
ktplayer/gradle/wrapper/: gradle-wrapper.properties
mvpDemo/app/: build.gradle
mvpDemo/app/src/main/: AndroidManifest.xml
mvpDemo/gradle/wrapper/: gradle-wrapper.properties
mvpRetrofit/app/: build.gradle
mvpRetrofit/app/src/main/: AndroidManifest.xml
mvpRetrofit/gradle/wrapper/: gradle-wrapper.properties
testDemo1/app/: build.gradle
testDemo1/app/src/main/: AndroidManifest.xml
testDemo1/app/src/main/cpp/: native-lib.cpp
testDemo1/gradle/wrapper/: gradle-wrapper.properties
(+129 files in other folders)
